[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Shuriken.gd" type="Script" id=1]
[ext_resource path="res://Art/Shuriken pronta 2.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "New Anim"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "degrage"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 6.42911

[sub_resource type="CircleShape2D" id=4]
radius = 7.57345

[node name="Shuriken" type="Area2D" groups=[
"Sword",
]]
collision_layer = 16
collision_mask = 6
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.5 )
scale = Vector2( 0.02, 0.02 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 1 )
anims/degrage = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Hitbox" type="Area2D" parent="." groups=[
"Sword",
]]
collision_layer = 16
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 4 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Area2D_body_entered"]
